refactor: clean some code